--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Pinwheel animation css below*/
 /* Credits to Linda Hurd for the pinwheel, this was opensource and i edited it a bit */
 html, body {
-    background: white url("/bg-5-full.jpg");
+    background-color: white;
     margin: 0;
     padding: 0;
     height: auto;
@@ -19,12 +19,11 @@ h1 {
 }
 
 h2 {
-    font-size: 2em;
     font-family: arial, helvetica, sans-serif;
     color: grey;
     margin: 0;
     position: absolute;
-    top: 64%;
+    top: 60%;
     left: 37%;
 }
 
@@ -34,7 +33,7 @@ h2 {
     width: 100%;
     height: 100%;
     /*padding-bottom: 75%;*/
-/*/ / This is the aspect ratio height: 0;*/
+    /*/ / This is the aspect ratio height: 0;*/
     overflow: hidden;
     text-align: center;
 }
@@ -51,7 +50,7 @@ h2 {
 
 #main-container {
     position: absolute;
-    top: 50%;
+    top: 55%;
 }
 
 #warning {
@@ -73,17 +72,27 @@ h2 {
 #ui-buttons li, #ui-buttons li:hover {
     cursor: pointer;
     border-radius: 50%;
-    list-style: none;
-    margin: 0px 5px;
+    margin: 0 5px;
+    padding: 0;
 }
 
 .exit:hover {
-    color: red;
+    color: #ea4335;
 }
 
 .help:hover {
-    color: blue;
+    color: #4285f4;
 }
+
+#myHelp img {
+    height: 25px;
+    width: 25px;
+}
+
+#guideCarousel a, #guideCarousel ol {
+    color: #4285f4;
+}
+
 
 /*pinwheel animation*/
 .main-container {
@@ -120,35 +129,35 @@ h2 {
 }
 
 #pin-2 .pin-big-triangle {
-    border-bottom: 30px solid red;
+    border-bottom: 30px solid #ea4335;
 }
 
 #pin-2 .pin-base {
-    border-left: 30px solid red;
+    border-left: 30px solid #ea4335;
 }
 
 #pin-3 .pin-big-triangle {
-    border-bottom: 30px solid mediumseagreen;
+    border-bottom: 30px solid #34a853;
 }
 
 #pin-3 .pin-base {
-    border-left: 30px solid mediumseagreen;
+    border-left: 30px solid #34a853;
 }
 
 #pin-1 .pin-big-triangle {
-    border-bottom: 30px solid gold;
+    border-bottom: 30px solid #fbbc05;
 }
 
 #pin-1 .pin-base {
-    border-left: 30px solid gold;
+    border-left: 30px solid #fbbc05;
 }
 
 #pin-4 .pin-big-triangle {
-    border-bottom: 30px solid deepskyblue;
+    border-bottom: 30px solid #4285f4;
 }
 
 #pin-4 .pin-base {
-    border-left: 30px solid deepskyblue;
+    border-left: 30px solid #4285f4;
 }
 
 .pin-big-triangle {
